<resources>
    <string name="app_name">Budget Manager</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="hint_input">Enter the amount</string>
    <string name="menu_home">Home</string>
    <string name="menu_info">More Information</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="more">More</string>
    <string name="view_by_date">View</string>
    <string name="limit_expense">Limit your expense</string>
    <string name="income">Income:</string>
    <string name="expense">Expense:</string>
    <string name="balance">Balance:</string>
    <string name="help">Help</string>
    <string name="choose_type_of_transaction">Choose the type of transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_category_fragment">Hello, this is category fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_your_income">Calculate Your Income</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
    </string-array>

</resources>
