<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_wallet"
            android:title="@string/your_wallet"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_limit_expense"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/limit_expense"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/category"
            app:showAsAction="never"/>

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info"
                android:title="@string/information"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_back"
                android:title="Logout"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>